# task-table

./: .gitignore  LICENSE  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts
.github/workflows/: CICD.yml  leak_checker.yml
backend/: Cargo.toml
backend/kernel/: Cargo.toml
backend/kernel/src/: domain.rs  dto.rs  initializer.rs  lib.rs  process.rs
backend/kernel/src/domain/: tt_dict.rs  tt_share.rs  tt_table.rs  tt_table_props.rs
backend/kernel/src/dto/: tt_data_dtos.rs  tt_dict_dtos.rs  tt_layout_dtos.rs  tt_share_dtos.rs  tt_table_dtos.rs
backend/kernel/src/process/: tt_basic_process.rs  tt_data_process.rs  tt_dict_process.rs  tt_layout_process.rs  tt_share_process.rs  tt_table_process.rs
backend/kernel/tests/: test_all.rs  test_data.rs  test_table.rs
backend/kernel/tests/config/: conf-default.toml
backend/mini_service/: Cargo.toml
backend/mini_service/config/: conf-default.toml
backend/mini_service/src/: main.rs
dev/: App.vue  main.ts  utils.ts
docs/: TableDemo.vue  index.md  table-demo.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.js
example/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
example/src/: App.vue  main.ts
frontend/: README.md  components.d.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  typedoc.json  vite.config.ts
frontend/docs/api/: exports.md
frontend/src/: index.ts
frontend/src/components/: Skeleton.vue  conf.ts  events.ts  props.ts
frontend/src/utils/: basic.ts
src/: Skeleton.vue  constant.ts  events.ts  index.ts  locales.ts  props.ts
src/assets/: icon.ts  main.css  main.scss  reset.css
src/assets/i18n/: en.ts  zh-cn.ts
src/assets/locales/: en.json  zh-CN.json
src/components/: Resize.vue  Skeleton.vue  Table.vue  conf.ts  event.ts  eventbus.ts  events.ts  index.ts  initializer.ts  props.ts  skeleton.vue
src/components/base/: DictSelect.vue  TreeSelect.vue
src/components/common/: Alert.ts  Alert.vue  Badge.vue  IconPicker.vue  Menu.ts  Menu.vue  Scrollable.vue  TableSetCommon.vue  menu.vue
src/components/filter/: conf.ts
src/components/form/: conf.ts
src/components/function/: BasicSetting.vue  CellClick.ts  CellEdit.vue  Column.vue  ColumnResize.ts  ColumnResize.vue  ColumnSetting.vue  ColumnShowSetting.vue  ContextMenu.vue  CreateLayout.vue  DictSelect.vue  Filter.vue  FilterSetting.vue  Group.ts  Group.vue  GroupSetting.vue  LayoutSetting.vue  Pagination.vue  QuickSearch.vue  Resize.vue  ResizeSetting.vue  RowSelect.vue  RowSort.vue  RowSortSetting.vue  RowTree.ts  RowTree.vue  SubDataShowSetting.vue  TableHeaderItem.vue  TableLayoutSetting.vue  TableLocalesSetting.vue  TableResizeSetting.vue  TableSetting.vue  TableThemeSetting.vue  Theme.vue
src/components/group/: conf.ts
src/components/list/: conf.ts  delete.vue  fill.vue  fixed.vue  list.vue  resize.vue
src/components/sort/: conf.ts
src/components/table/: conf.ts  fill.vue  fixed.vue  resize.vue  sort.vue  table.vue
src/components/tools/: size.vue
src/features/actionColumn/: actionColumnProps.ts
src/features/aggData/: aggDataProps.ts
src/features/editData/: editDataProps.ts
src/features/filterData/: filterDataProps.ts
src/features/ganttLayout/: ganttLayoutProps.ts
src/features/groupData/: groupDataProps.ts
src/props/: basicProps.ts  enumProps.ts  enumsProps.ts  eventProps.ts  eventsProps.ts  featuresProps.ts  functionProps.ts  index.ts  kernelProps.ts  layoutProps.ts  tableProps.ts
src/utils/: basic.ts  index.ts  tsHelper.ts  vueHelper.ts  wsp.ts
support/: Cargo.toml
support/kernel/: Cargo.toml
support/kernel/src/: domain.rs  dto.rs  process.rs
support/kernel/src/domain/: tt_share.rs  tt_table.rs
support/kernel/src/dto/: tt_basic_dtos.rs  tt_data_dtos.rs  tt_dict_dtos.rs  tt_layout_dtos.rs  tt_share_dtos.rs  tt_table_dtos.rs
support/kernel/src/process/: tt_data_process.rs  tt_dict_process.rs  tt_layout_process.rs  tt_share_process.rs  tt_table_process.rs
support/kernel/tests/: test_all.rs  test_data.rs  test_dict.rs  test_layout.rs  test_table.rs
support/mini_service/: Cargo.toml
support/mini_service/config/: conf-default.toml
support/mini_service/src/: main.rs  processor.rs
support/mini_service/tests/log/: app.log.2024-01-18-09-31  app.log.2024-01-18-09-32
test/: todo.test.ts
test/components/: Alert.test.ts
test/props/: functionProps.test.ts  tableProps.test.ts
test/utils/: basic.test.ts  vueHelper.test.ts
(+111 files in other folders)
