[package]
name = "task-table-kernel"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[lib]
name = "task_table_kernel"
path = "src/lib.rs"

[features]
web = ["tardis/web-server"]

[dependencies]
serde.workspace = true
lazy_static.workspace = true
tardis = { workspace = true, features = ["reldb-core", "reldb-postgres"] }
