[package]
name = "task-table-service"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde = { version = "1", featurces = ["derive"] }
task-table-kernel = { path = "../kernel" }
tardis = { version = "0.1.0-rc.5", features = ["reldb-postgres"] }
