[package]
name = "task-table-service"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
lazy_static.workspace = true
tardis = { workspace = true, features = ["web-server", "cluster"] }
task-table-kernel = { path = "../kernel" }
