# eslint-disable toml/padding-line-between-pairs

[package]
name = "task-table-service"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
serde.workspace = true
lazy_static.workspace = true
strum.workspace = true
tardis = { workspace = true, features = ["web-server", "tracing-appender"] }
task-table-kernel = { path = "../kernel" }
